--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon app.js",
     "dev": "nodemon app.js"
   },
   "author": "",
@@ -11,7 +12,9 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20",
     "typesense": "^1.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
